--- a/fosssite/templates/fosssite/home.html
+++ b/fosssite/templates/fosssite/home.html
@@ -1,31 +1,34 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   {%load staticfiles%}
 
   <head>
-    <title>fossLNMIIT</title>
+    <title>FossLnmiit</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootswatch/3.3.2/paper/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.js"></script>
-    <![endif]-->
   </head>
 
   <body>
 <div class="experiment">
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
-        <div class="collapse navbar-collapse">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+
+          </div>
+
+        <div class="collapse navbar-collapse" id="navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'fosssite:home' %}">Home</a></li>
-            <li><a href="{% url 'fosssite:events' %}">Events</a></li>
-            <li><a href="{% url 'fosssite:contributions' %}">Contributions</a></li>
-            <li><a href="{% url 'fosssite:blog' %}">Blog</a></li>
+            <li {% block acitve1 %}class="active"{% endblock %}><a href="{% url 'fosssite:home' %}">Home</a></li>
+            <li {% block acitve2 %}{% endblock %}><a href="{% url 'fosssite:events' %}">Events</a></li>
+            <li {% block acitve3 %}{% endblock %}><a href="{% url 'fosssite:contributions' %}">Contributions</a></li>
+            <li {% block acitve4 %}{% endblock %}><a href="{% url 'fosssite:blog' %}">Blog</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
               {% block profile %}
