--- a/fosssite/templates/fosssite/signup.html
+++ b/fosssite/templates/fosssite/signup.html
@@ -22,7 +22,7 @@
                                       <input name="email" type="text" placeholder="Email ID" size="40" onClick="border: 1px solid #30a8da;" id="mail"/>
                                       <p class="text-danger">{{ form.password.errors.as_text  }}</p>
                                       <input name="password" type="password" placeholder="Password" size="40" onClick="border: 1px solid #30a8da;" id="password"/>
-                                      <button type="submit" class="btn btn-default">Create My Account</button>
+                                      <button type="submit" class="btn">Create My Account</button>
                                     </form>
                                 </div>
           </div>
