--- a/fosssite/templates/fosssite/login.html
+++ b/fosssite/templates/fosssite/login.html
@@ -7,7 +7,8 @@
     <span class="glyphicon glyphicon-user"></span>SIGN UP</a>
   </li>
 {% endblock %}
-
+{%block image%}
+{% endblock %}
 
 {% block content %}
 <div id="wrapper">
