--- a/fosssite/templates/fosssite/signup.html
+++ b/fosssite/templates/fosssite/signup.html
@@ -4,6 +4,8 @@
   <a class="nav-link" href="{% url 'fosssite:login_user' %}"><span class="glyphicon glyphicon-log-in"></span> LOGIN</a>
 </li>
 {% endblock %}
+{% block image%}
+{% endblock %}
   {% block content %}
           <div id="wrapper">
              <div class="join">Join the FOSS Community</div>
@@ -24,15 +26,13 @@
                                       {% endif %}
                                       <input name="email" type="text" placeholder="Email ID" size="40" onClick="border: 1px solid #30a8da;" id="mail"/>
                                       <p class="text-danger">{{ form.password.errors.as_text  }}</p>
-<<<<<<< HEAD
                                       <input name="password" type="password" placeholder="Password" size="40" onClick="border: 1px solid #30a8da;" id="password"/>
-                                      <button type="submit" class="btn">Create My Account</button>
-=======
-                                      <input name="password" type="password" placeholder="Password" size="40" onClick="border: 1px solid #30a8da;" id="password"/><br>
+                                     <br>
                                       <input name="is_public" type="checkbox"  size="40" onClick="border: 1px solid #30a8da;"/> Make Profile Public<br>
-                                      <button type="submit" class="btn btn-default">Create My Account</button>
-
->>>>>>> 9a0f2cfea603dc34c94deb7683fa94b6cd67255c
+                                      <button type="submit" class="btn">Create My Account</button>
+                                      
+                                      
+                                      
                                     </form>
                                 </div>
           </div>
