--- a/fosssite/templates/fosssite/edituser.html
+++ b/fosssite/templates/fosssite/edituser.html
@@ -46,6 +46,12 @@
                <a href="{% url 'fosssite:edit_contributions' name=request.user %}">
                <button type="button" class="btn btn-primary">Add Contributions</button></a>
              </div>
+             <br />
+             <div class='form-group'>
+               <label for="user_name">Add Speakers / Presentation</label><br/><br/>
+               <a href="{% url 'fosssite:edit_speakers' name=request.user %}">
+               <button type="button" class="btn btn-primary">Add Speakers/Presentation</button></a>
+             </div>
              <br/>
              {% if errors %}
              <p class="text-danger">{{ errors }}</p>
