--- a/fosssite/templates/fosssite/edituser.html
+++ b/fosssite/templates/fosssite/edituser.html
@@ -20,6 +20,11 @@
 
        <div class='row'>
          <div class='col-md-6'>
+          <div class='form-group'>
+            
+              <input type="hidden" autofocus="autofocus" class="form-control" id="user_email"{{ user_form.email }}
+            </div>
+            <br/>
             <div class='form-group'>
                <label for="user_name">First Name</label>
                <input class="form-control" id="user_name" {{ user_form.first_name }}
