--- a/fosssite/templates/fosssite/forgotpassword.html
+++ b/fosssite/templates/fosssite/forgotpassword.html
@@ -1,5 +1,6 @@
 {% extends 'fosssite/home.html' %}
-
+{% block image %}
+{% endblock %}
 {% block content %}
   <div id="wrapper">
     <div class="join">
