--- a/fosssite/templates/fosssite/profileuser.html
+++ b/fosssite/templates/fosssite/profileuser.html
@@ -9,6 +9,8 @@
 <li><a href="{% url 'fosssite:logout' %}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
 {% endif %}
 {% endblock %}
+{% block image %}
+{% endblock %}
 {% block content %}
 
 
