--- a/fosssite/templates/fosssite/blog.html
+++ b/fosssite/templates/fosssite/blog.html
@@ -10,7 +10,8 @@
 <li class="main-nav-link"><a class="nav-link" href="{% url 'fosssite:UserFormView'%}"><span class="glyphicon glyphicon-user"></span>SIGN UP</a></li>
 <li class="main-nav-link"><a class="nav-link" href="{% url 'fosssite:login_user' %}"><span class="glyphicon glyphicon-log-in"></span> LOGIN</a></li>
 {% endblock %}
-
+{% block image %}
+{% endblock %}
 {% block content %}
 
 
