--- a/fosssite/templates/fosssite/events.html
+++ b/fosssite/templates/fosssite/events.html
@@ -11,7 +11,8 @@
 <li class="main-nav-link"><a class="nav-link" href="{% url 'fosssite:login_user' %}"><span class="glyphicon glyphicon-log-in"></span> LOGIN</a></li>
 
 {% endblock %}
-
+{% block image %}
+{% endblock %}
 {% block content %}
 
 
