--- a/fosssite/templates/fosssite/profileuser.html
+++ b/fosssite/templates/fosssite/profileuser.html
@@ -1,12 +1,18 @@
 {% extends 'fosssite/home.html' %}
+{% load staticfiles %}
 {% block profile %}
-{% if puser %}
-<li><a href="{% url 'fosssite:UserFormView'%}"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
-<li><a href="{% url 'fosssite:login_user' %}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-{% else %}
+{% if request.user.is_authenticated  %}
+
 <li><a href="{% url 'fosssite:profileuser' name=request.user %}"><span class="glyphicon glyphicon-user"></span> Welcome {{ request.user }}</a></li>
 <li><a href="{% url 'fosssite:edit_user_profile' name=request.user %}"><span class="glyphicon glyphicon-edit"></span> Edit Profile</a></li>
 <li><a href="{% url 'fosssite:logout' %}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+
+{% else %}
+
+<li><a href="{% url 'fosssite:UserFormView'%}"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
+<li><a href="{% url 'fosssite:login_user' %}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+
+
 {% endif %}
 {% endblock %}
 {% block image %}
@@ -18,12 +24,7 @@
 	<div class='row'>
 		<div class='col-md-12'>
 			<div class='page-header'>
-				<h2>
-					Sagar Chand Agarwal
-					<span class='pull-right'>
-						<small>fossLNMIIT User Profile</small>
-					</span>
-				</h2>
+
 			</div>
 		</div>
 	</div>
@@ -38,8 +39,14 @@
 				{% endif %}
 				</div>
 				<div class='row'>
-				<ul class='nav navbar-nav'>
-				</ul>
+					<div class='col-md-12'>
+					  <ul class='nav navbar-nav'>
+						<li><a href="{{ userprofile.twitterurl }}" target="_blank"><img alt="Twitter" height="20" src="{% static 'assets/twitter.png' %}" width="20" /></a></li>
+						<li><a href="{{ userprofile.facebookurl }}" target="_blank"><img alt="Facebook" height="20" src="{% static 'assets/fb.png' %}" width="20" /></a></li>
+						<li><a href="{{ userprofile.lnkdnurl }}" target="_blank"><img alt="Group" height="20" src="{% static 'assets/linkedin.png' %}" width="20" /></a></li>
+						<li><a href="{{ userprofile.githuburl }}" target="_blank"><img alt="Group" height="20" src="{% static 'assets/github.png' %}" width="20" /></a></li>
+					  </ul>
+					</div>
 				</div>
 	</div>
 	<div class='col-md-8'>
@@ -75,9 +82,37 @@
 							<th width='30%'>About Me</th>
 							<td>{{userprofile.about_me}}</td>
 						</tr>
-
+						<tr>
+							<th width='30%'>Website</th>
+							<td>{{userprofile.example}}</td>
+						</tr>
 
 				</table>
+			</div>
+			<div class='col-md-12'>
+				<h3>Contributions :-</h3><br>
+					{% if contributions_list %}
+						<ul>
+						{% for contribution in contributions_list %}
+						<li><a href="{{ contribution.contribution_link }}">{{ contribution.organization }}</a></li>
+						<br>
+						{% endfor %}
+					</ul>
+					{% else %}
+						<p>No Contributions</p>
+					{% endif %}
+					<br><br>
+					<h3>Speakers/Presentations :-</h3><br>
+						{% if speakers_list %}
+							<ul>
+							{% for speakers in speakers_list %}
+							<li><a href="{{ speakers.event_link }}">{{ speakers.event_name }}</a></li>
+							<br>
+							{% endfor %}
+						</ul>
+						{% else %}
+							<p>No Speakers / Presentations</p>
+						{% endif %}
 			</div>
 		</div>
 	</div>
